css work done in lecture

--- a/index.html
+++ b/index.html
@@ -12,12 +12,19 @@
     <link href="https://fonts.googleapis.com/css?family=Amatic+SC|Black+Han+Sans|Prompt" rel="stylesheet">
 
 </head>
-<body>
+<body id="container">
     
+<!-- Introduction to Cascading Style Sheets -->
+
     <!-- Created nav bar -->
     <header>
         <nav>
+
+            <!-- link below for the image on the header -->
+
             <img src="images/adidas-logo-png-black-0.png" alt="">
+
+            <!-- different directories on header -->
 
             <ul>
                 <li><a href="">Home</a></li>
@@ -27,6 +34,29 @@
             </ul>
         </nav>
     </header>
+
+    <main class="container">
+        <section>
+            <article class="intro">
+                <p>
+                  nothing is impossible
+                </p>
+
+                <a href="https://www.adidas.com/us/men-lifestyle" target="_blank">
+                    <button>
+                        Lifestyle
+                    </button>
+                </a>
+
+                <a href="https://shop.adidas.co.za/men/shoes/Sport%20Inspired/" target="_blank">
+                    <button class="btn">
+                        Sport
+                    </button>
+                </a>
+
+            </article>
+        </section>
+    </main>
 
 
 </body>
